@@ -1,5 +1,7 @@
 AUX include.patch 294 SHA256 8b97140f69856b6b291ac181680ac3469e6ece893389a1f4fc440b8c4c2db3f3 SHA512 c1c88c99041a98771d23e6f3dbdbbb1a67589eac531ec7a73ddfe3f0823ef0ea1296719a64bc6952949ba37482f96887d649306eca1dc705ddda7b27e52c46cb WHIRLPOOL bfc767ed6342ac56f41a8f5ca2fad67164abef249b751b3bced09b828f696f6c3be00ed4b8bc3cc67c61f5b76099ae6702d16797b8920121230c92e2c7e7692c
 DIST gxtuner-2.0.tar.bz2 32768 SHA256 c19dd41f11e3331fb1ba38643b61c6181853f45e172bef9c4e7d062050e4a61b SHA512 15445c001012f5ffcf00ad072b4bf27287290778585b96db1ad56e57063eb6d1ba6458052ad71e2eb1e905c95a2e5fffe5be75f927f341c5bf3a36ab0f72c04f WHIRLPOOL 52eba22b32916648e1411a7ebcc02eabbc9f9fae11419cb1ed61922efaaed57959900ba87a28de5960671abcf1618108bcdb56c32daf7a38371f129e9f801bb8
+DIST gxtuner-2.1.tar.bz2 35501 SHA256 418d60ae9be55953ea0c5ea7e29066ea40e3f71327a362216c45480b7a34684c SHA512 9aab947841c179cc99854230986430c209adb77beddce3623c44785e6919fdbdd2653604c9705589f5bf1032e9dff949db3668fa30dd935dfe7bc211563a14c5 WHIRLPOOL 03830f4101652950340673dfc72d0a341da0211cece02b2b90c2a0e3efe0094de9d04ff13b11e6315abf1fc1a846071c812d335fbb9a521902344db9edcd2804
 EBUILD gxtuner-2.0.ebuild 786 SHA256 a2ded2af123ade0cda40029c8afd2e8b2f696fbe10b944db55117c287dc4237f SHA512 2a814daadc27fa05b60b3a1d3bad50c6ef5868c7b5092a3bfcd56ce4dac9332c41fc143f71003e2b8592884eb740d5c0ffdb3015e09c8199d600035f9aabb602 WHIRLPOOL dc27cfd0d53fc1063e02a291630f8d43fd6fc3e3b19bec83478968a648ad15ea2d323b4f21e565e1b7a2a5910769adc12e224055bd0be292d5b143e810a16a7b
-MISC ChangeLog 337 SHA256 dca879031b285e02236f681ff8574c08ac43896174bc3a1ebf9dffb717fce33a SHA512 845be8ec49af9dab33ee587ea8d010db323cf4dcdeb8529bde4c425cd3874a27ea84e352cab9c5d41f0588b24e7bf40b1943c77216408157d047be85763003ff WHIRLPOOL 98bdc6815feb7939a265db3b4bd351e64b7b43d06188650ee46042b86d2435f176f8aabc6e8fc656f389d1efab501106631f787b53318bd74cdd9e14f537d9a0
-MISC metadata.xml 268 SHA256 96629b266b743f566c29158d4498edeeb1cd6b1f0cd9629e42d4f10b4da82f89 SHA512 3d709a016692f887d642d19b2644c10a09f666133f1f035b8a4c10e5772fbb39fa84a856a496d392594ccf850739fbf46ffa78ecc74214e8342ee97676b375e9 WHIRLPOOL 17c886c5b97925bd9223c0210170a63e55a2c2a238ae81ebf8efa14109d790406f45d0773d63bea825c1e40b058bd9e20a5d9c264da4db7c8fd2e556ecd83b2a
+EBUILD gxtuner-2.1.ebuild 667 SHA256 143bf17896802b246574161965c8a49cadbae0ce81c943601a7859ea1e3167c0 SHA512 df9d76e884620eb7b220db157ede6bdbf0157052351b2cc3cf38fb3722a94fd11c3fc239a8862baf86c2a0f14eb5e14648d5be846a952b3434733ca1ed0c834b WHIRLPOOL 147b7c421457a3eb0250b0194ce38c030c44db4e033138aa8c805558b953c3cbfb653a6d1b3192f09a677e9e7e707dbf6646f03ee7140af13f4ad088d58c1260
+MISC ChangeLog 649 SHA256 2c6ac3a603c9288c70133b14c0c2f06e3f066b225b0e4f9aacc9e49374025088 SHA512 b110562d5120b1b31ea4b9edfff115613e1a7ae3c683c84a5dcef2d8b0b8fab46efc1a52759f0345d1c3cfb038bd451abbbb149056f1a998eeb060c5df76aba8 WHIRLPOOL e375f5a95df4b0cc15d30c1d7c14b8e2938e2aca8b6265cfbb7cdf102463eeaadb7e163be6e5f9209ddb71826006eaf8445ac91f1923168d079dff420234d8a2
+MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
